Version: 0.3.0
Date: ??.??.2022
  Features:
    - Space Spidertron now slowly hovers instead of bopping up and down. (Thanks Xorimuth!)
    - Space Spidertron now hides in a menu-simulation.
  Changes:
    - Prevent Lex's Aircraft from being dockable.
    - Space Spidertron recipe now has more realistic ingredients.
    - Less harsh checks on which spiders are allowed to dock.
  Bugfixes:
    - [SE] No longer changes all spider collision masks regardless of if it's blacklisted.
    - Space Spidertron can no longer travel far into `out-of-map` tiles. (Thanks Soggs!)
    - Fix catching too many things in Picker Dolly events.
    - Fix a possible CRC issue.
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 19.08.2022
  Changes:
    - AAI Programmable Vehicles: AI versions can no longer dock.
  Bugfixes:
    - Prevent crash when too many dockable spidertrons exist (Thanks viperfan7!)
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 17.08.2022
  Changes:
    - Dock now shows compatible spider vehicles.
  Bugfixes:
    - Now compatible with Combat Robots Overhaul (Thanks FuzzyOne!)
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 31.7.2022
  Changes:
    - Space Spidertrons now support drivers (Thanks Klezmer!).
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 31.7.2022
  Changes:
    - No longer do collision checks when undocking.
  Bugfixes:
    - [SEK2] Space Spidertron now also supports nuclear fuel (Again, thanks runtimethecat!).
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 30.07.2022
  Features:
    - Support Krastorio2 equipment (Thanks runtimethecat!).
  Changes: